# rosbot2

./: .gitignore  .gitmodules  compile_commands.json
.clangd/index/: cmd_vel_ws2812b_example.cpp.2E8B4CAAB3230D0D.idx  costmap_client.cpp.F1657C4009578A8D.idx  costmap_client.h.F8E27DF38F238A74.idx  costmap_tools.h.E3F7400AE9D3518B.idx  estimation_internal.h.8B532F13BD7565C0.idx  explore.cpp.715F32E7D0392CD7.idx  explore.h.B0F2EA82D92CF06D.idx  frontier_search.cpp.EBC2C00ADB909DC0.idx  frontier_search.h.CFA881A7ED3F5221.idx  grid_compositor.cpp.2D74D7995BABBF3D.idx  grid_compositor.h.07169B4FB1923CFF.idx  grid_warper.cpp.A34DFD9C5C8B81C7.idx  grid_warper.h.86B4DE010573552A.idx  map_merge.cpp.0DFA11E72C88EC5D.idx  map_merge.h.F5D0FB5B852FAA5B.idx  merging_pipeline.cpp.8B7EA33D7C271F85.idx  merging_pipeline.h.59A04EEF8A7A8A4C.idx  move_base_ws2812b_example.cpp.F0EFBB6B5E1BE213.idx  msgs_conversion.cpp.64605DE30E1FEFD5.idx  object_follower.cpp.0CBAA563090985DE.idx  object_follower.hpp.E4DC7A6458041442.idx  object_follower_node.cpp.74149DB9AACEF14F.idx  static_tf_publisher.cpp.6133070BB0BA99F5.idx  test_merging_pipeline.cpp.676F52AB4E92AFB3.idx  testing_helpers.h.42B1F9FA359D3F98.idx  tf_publisher_node.cpp.C3C3D0A455A99600.idx
dynamic_tutorials/: package.xml
fastsense_msgs/: CMakeLists.txt  package.xml
fastsense_msgs/msg/: clear_area.msg  img_points_msg.msg  marker_detector_msg.msg  mover_cmd.msg  mover_status.msg  object_msg.msg  polar_map.msg
object_detector/: CMakeLists.txt  README.md  package.xml  setup.py
object_detector/launch/: find_object_2d.launch  object_detector.launch  object_detector_d435.launch  rosbot2.launch
object_detector/src/: aerobot_logo_detector.py  aruco_detector.py  gate_detector.py  qr_detector.py
object_follower/: CMakeLists.txt  Doxyfile  mainpage.dox  package.xml  rosdoc.yaml
object_follower/cfg/: ObjectFollower.cfg
object_follower/doc/: manifest.yaml
object_follower/include/object_follower/: ConversionFunctions.hpp  Converter.hpp  GoalChecker.hpp  GoalGenerator.hpp  GoalGeneratorBaselink2D.hpp  GoalGeneratorNearest.hpp  GoalGeneratorNearest2D.hpp  GoalPublisher.hpp  GoalPublisherMoveBase.hpp  GoalPublisherTf.hpp  ObjectFollowerCore.hpp  ObjectFollowerFactory.hpp  ObjectFollowerFarm.hpp  object_follower.hpp  object_follower_2d.hpp  object_follower_core.hpp  object_follower_move_base.hpp  object_follower_move_base_node.hpp  object_follower_tf_broadcaster.hpp  object_follower_tf_broadcaster_node.hpp  objf_2d.hpp  objf_core.hpp  objf_move_base.hpp  objf_move_base_node.hpp  objf_tf_broadcaster.hpp  objf_tf_broadcaster_node.hpp
object_follower/launch/: object_follower.launch  object_follower_move_base.launch  object_follower_test.launch  object_follower_tf.launch  object_follower_tf_test.launch
object_follower/src/object_follower/: ConversionFunctions.cpp  Converter.cpp  GoalChecker.cpp  GoalGenerator.cpp  GoalGeneratorBaselink2D.cpp  GoalGeneratorNearest.cpp  GoalGeneratorNearest2D.cpp  GoalPublisher.cpp  GoalPublisherMoveBase.cpp  GoalPublisherTf.cpp  ObjectFollowerCore.cpp  ObjectFollowerFactory.cpp  ObjectFollowerFarm.cpp  ObjectFollowerMain.cpp  object_follower.cpp  object_follower_2d.cpp  object_follower_core.cpp  object_follower_move_base.cpp  object_follower_move_base_main.cpp  object_follower_move_base_node.cpp  object_follower_node.cpp  object_follower_tf_broadcaster.cpp  object_follower_tf_broadcaster_main.cpp  object_follower_tf_broadcaster_node.cpp  objf_2d.cpp  objf_core.cpp  objf_move_base.cpp  objf_move_base_main.cpp  objf_move_base_node.cpp  objf_tf_broadcaster.cpp  objf_tf_broadcaster_main.cpp  objf_tf_broadcaster_node.cpp
object_follower/test/: object_follower_test.cpp  tf_publisher_node.cpp
object_follower/test/launch/: object_follower.test  object_follower_forward_x.test  object_follower_forward_z.test
object_follower/tests/: static_tf_publisher_node.cpp  tf_publisher_node.cpp
rosbot2/launch/: amcl.launch  bringup.launch  ekf.launch  follower.launch  gazebo_follower.launch  gazebo_slam.launch  gazebo_world.launch  gmapping.launch  gmapping_silent.launch  map_server.launch  mbf.launch  move_base.launch  navigation.launch  robot_state_publisher.launch  rosbot_navigation.launch  rosbot_slam.launch  rosserial_bridge.launch  rviz.launch  slam.launch
rosbot2/rviz/: rosbot2.rviz
rosbot2/scripts/: gmapping_silent.sh
rosbot2_gazebo/: CMakeLists.txt  package.xml
rosbot2_gazebo/launch/: bringup.launch  bringup.launch.orig  follower.launch  gazebo_rosbot.launch  gazebo_world.launch  (+6 more)
rosbot_description/: CMakeLists.txt
rosbot_ekf/: CMakeLists.txt
rosbot_gazebo/: CMakeLists.txt  package.xml
(+68 files in other folders)
