<?xml version="1.0"?>
<package format="2">
    <name>fastsense_msgs</name>
    <version>0.2.0</version>
    <description>Fast Sense msgs package</description>

    <maintainer email="urock@fastsense.tech">default</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
